[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/tower.gd" type="Script" id=1]
[ext_resource path="res://scenes/ruins.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/rock_projectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://textures/spot_2.png" type="Texture" id=4]
[ext_resource path="res://textures/tower_1.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 112.0

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="tower_projectile" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
original_scene = "res://scenes/towers/tower_projectile.tscn"
fire_scene = "res://scenes/towers/tower_fire_projectile.tscn"
ice_scene = "res://scenes/towers/tower_ice_projectile.tscn"
aoe = false
attack_cooldown = 0.9
damages = 3.0
durability = 12
ruin_scene = ExtResource( 2 )
projectile_scene = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Sprite" index="0"]

texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Area2DRange" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DRange" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Area2DBody" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Pickable" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DBody" index="0"]

shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]

[connection signal="mouse_entered" from="Area2DBody" to="." method="_on_Area2D2_mouse_entered"]

[connection signal="mouse_exited" from="Area2DBody" to="." method="_on_Area2DBody_mouse_exited"]


